[workspace]
members = [
    "warthog_wow",
    "warthog_lib",
    "warthog_messages",
    "wow_client",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
wow_login_messages = { git = "https://github.com/gtker/wow_messages.git", rev = "0b8c01775429660da4b7a3b60477a7909daacbc6", features = ["tokio"] }
wow_srp = { git = "https://github.com/gtker/wow_srp", rev = "5428c4fd722005ea1be2e866d6f0e5d3000b7cd4", default-features = false, features = ["srp-default-math", "integrity", "matrix-card"] }
#wow_srp = { path = "../../wow_srp", default-features = false, features = ["srp-default-math", "integrity", "matrix-card"] }

[workspace.lints.rust]
unused_must_use = "deny"
