[package]
name = "warthog_wow"
version = "0.1.0"
edition = "2021"

[dependencies]
warthog_lib = { path = "../warthog_lib" }
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0.197", features = ["derive"] }
dirs = "5.0.1"
tokio = { version = "1.36.0", features = ["full"] }

[lints]
workspace = true