[package]
name = "warthog_wow"
version = "0.1.0"
edition = "2021"

[dependencies]
warthog_lib = { path = "../warthog_lib" }
clap = { version = "4.5.1", features = ["derive"] }
tokio.workspace = true
warthog_messages = { path = "../warthog_messages", features = ["tokio"] }


[dev-dependencies]
wow_client = { path = "../wow_client" }

[lints]
workspace = true