[package]
name = "wow_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
#wow_login_messages = { version = "0.4.0", features = ["tokio"] }
wow_login_messages = { git = "https://github.com/gtker/wow_messages.git", rev = "12dc264dd22cba3c31de78ea551fcffdefb9265d", features = ["tokio"] }
wow_srp = { version = "0.7.0", features = ["srp-default-math"] }
